--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^4.1.6",
     "axios": "^1.6.7",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.0.1",
+    "react-pdf": "^7.7.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
